cli/tests/ui/program_env_value_wrong_type.stderr
Error: manifest::deserialize_error

  × check failed
  ╰─▶ json5 deserialize error at program.env.PROFILE: expected an
      interpolation string, a `{ file: ... }` reference, or an object with
      `value`
   ╭─[<CARGO_MANIFEST_DIR>/tests/ui/program_env_value_wrong_type.json5:6:16]
 5 │     env: {
 6 │       PROFILE: 123,
   ·                ─┬─
   ·                 ╰── expected an interpolation string, a `{ file: ... }` reference, or an object with `value`
 7 │     },
   ╰────
